@@ -1,3 +1,8 @@
+2003-04-24  Bradley Bell  <btb@icculus.org>
+
+	* main/inferno.c: redeclare main() 'the SDL way', make sure SDL.h
+	is always included.
+
 2003-04-24  Ingo van Lil  <inguin@gmx.de>
 
 	* main/render.c: fix misspellings of NDEBUG
